prometheus-node-exporter (0.12.0+ds+really0.12.0-2) UNRELEASED; urgency=medium

  * debian/watch: Take into account RCs and current version hack.
  * Fix default configuration.

 -- Martín Ferrari <tincho@debian.org>  Sat, 07 May 2016 17:13:38 +0100

prometheus-node-exporter (0.12.0+ds+really0.12.0-1) unstable; urgency=medium

  * New upstream release, which is really 0.12.0. The previous version was
    actually 0.12.0rc1, but I made a mistake, hence the weird version number
    for this release. Closes: #814227.
  * Stop ignoring some configuration values in initscript. Thanks to
    contaminates@baconmail.net for the patch. Closes: #813544.
  * Remove now unneeded patches.
  * debian/control:
    - Add new dependencies.
    - Update Standards-Version with no changes.
  * debian/rules: Fix gen-orig-tgz target.

 -- Martín Ferrari <tincho@debian.org>  Fri, 06 May 2016 19:02:38 +0000

prometheus-node-exporter (0.12.0+ds-2) unstable; urgency=medium

  * Fix builds on arm64.

 -- Martín Ferrari <tincho@debian.org>  Mon, 25 Jan 2016 16:58:35 -0300

prometheus-node-exporter (0.12.0+ds-1) unstable; urgency=medium

  * New upstream release.
  * Add new dependency on golang-github-kolo-xmlrpc-dev.
  * Add new dependency on golang-github-prometheus-common-dev, and update
    patches.

 -- Martín Ferrari <tincho@debian.org>  Mon, 11 Jan 2016 19:29:42 +0000

prometheus-node-exporter (0.11.0+ds-1) unstable; urgency=medium

  * New upstream release.

 -- Martín Ferrari <tincho@debian.org>  Thu, 03 Sep 2015 15:35:33 +0300

prometheus-node-exporter (0.10.0+ds-3) unstable; urgency=medium

  * debian/postrm: Do remove log and pid files.
  * debian/init: Fix description.

 -- Martín Ferrari <tincho@debian.org>  Tue, 07 Jul 2015 11:28:12 +0000

prometheus-node-exporter (0.10.0+ds-2) unstable; urgency=medium

  * debian/control: Update dependency name for prometheus/log.
  * debian/postrm: Do not remove directories forcefully, as these are shared
    with other prometheus tools.
