@@ -1,5 +1,6 @@
 # Set the command-line arguments to pass to the server.
-ARGS='-collector.diskstats.ignored-devices="^(ram|loop|fd)\\d+$"'
+ARGS='-collector.diskstats.ignored-devices=^(ram|loop|fd)\d+$
+      -collector.textfile.directory=/var/lib/prometheus/node-exporter'
 
 # Prometheus-node-exporter supports the following options:
 #  -auth.pass="": Password for basic auth.
