@@ -1,2 +1,2 @@
-var/lib/prometheus
+var/lib/prometheus/node-exporter
 var/log/prometheus
