@@ -1,0 +1,9 @@
+/var/log/prometheus/prometheus-node-exporter.log {
+    weekly
+    rotate 10
+    copytruncate
+    compress
+    delaycompress
+    notifempty
+    missingok
+}
