@@ -2,37 +2,46 @@
 
 export DH_VERBOSE=1
 export DH_GOPKG := github.com/prometheus/node_exporter
+export DH_GOLANG_INSTALL_EXTRA := collector/fixtures
 
-DEBVERS    ?= $(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
+BUILDDIR := $(CURDIR)/build
+METAPKG := github.com/prometheus/common
+
+DEBVERS    ?= $(shell dpkg-parsechangelog -SVersion)
 VERSION    ?= $(shell echo '$(DEBVERS)' | sed 's/^[[:digit:]]*://; s/[-].*//')
-DEBPKGNAME ?= $(shell dpkg-parsechangelog | sed -n -e 's/^Source: //p')
-BUILDDIR := $(shell perl -w -MDebian::Debhelper::Buildsystem::golang -e \
-        'print Debian::Debhelper::Buildsystem::golang->new()->get_builddir()')
+DEBPKGNAME ?= $(shell dpkg-parsechangelog -SSource)
+DEBDATE    ?= $(shell dpkg-parsechangelog -SDate)
+REV        := $(DEBVERS)
+BRANCH     := debian/sid
+USER       := pkg-go-maintainers@lists.alioth.debian.org
+HOSTNAME   := debian
+BUILD_DATE := $(shell date --utc --date='$(DEBDATE)' +%Y%m%d-%H:%M:%S)
+GO_VERSION := $(shell go version | sed 's/go version \(\S*\).*/\1/')
+BUILDFLAGS := -ldflags \
+  " -X $(METAPKG)/version.Version=$(VERSION)\
+    -X $(METAPKG)/version.Revision=$(REV)\
+    -X $(METAPKG)/version.Branch=$(BRANCH)\
+    -X $(METAPKG)/version.BuildUser=$(USER)\
+    -X $(METAPKG)/version.BuildDate=$(BUILD_DATE)\
+    -X $(METAPKG)/version.GoVersion=$(GO_VERSION)"
 
 %:
-	dh $@ --buildsystem=golang --with=golang
-
-override_dh_auto_configure:
-	dh_auto_configure -O--buildsystem=golang
-	# Include vendored dependencies.
-	for i in github.com/beevik/ntp github.com/soundcloud/go-runit; do \
-            DEST=`dirname $(BUILDDIR)/src/$$i`; \
-	    mkdir -p $$DEST; \
-	    cp -av vendor/$$i $$DEST; \
-	done
-	# Copy test fixtures.
-	cp -av collector/fixtures $(BUILDDIR)/src/$(DH_GOPKG)/collector
+	dh $@ --buildsystem=golang --with=golang --builddirectory=$(BUILDDIR)
 
 override_dh_auto_build:
-	dh_auto_build -O--buildsystem=golang -- $(BUILDFLAGS)
+	dh_auto_build -- $(BUILDFLAGS)
+
+override_dh_auto_test:
+	chmod a+x $(BUILDDIR)/src/$(DH_GOPKG)/collector/fixtures/megacli
+	dh_auto_test
 
 override_dh_auto_install:
-	dh_auto_install
-	# we don't want the golang source (yet?)
-	rm -r debian/$(DEBPKGNAME)/usr/share/gocode
+	mkdir -p debian/$(DEBPKGNAME)/usr/bin
 	# Rename the binary to match the debian package.
-	mv -v debian/$(DEBPKGNAME)/usr/bin/node_exporter \
+	cp -v $(BUILDDIR)/bin/node_exporter \
             debian/$(DEBPKGNAME)/usr/bin/$(DEBPKGNAME)
+	cp -v debian/README.textfile \
+            debian/$(DEBPKGNAME)/var/lib/prometheus/node-exporter
 
 gen-orig-tgz:
 	if [ ! -f ../$(DEBPKGNAME)_$(VERSION).orig.tar.gz ] ; then \
